# infinicon

./: .gitignore
experiments/hypernet-lora/: .gitignore  README.md  pyproject.toml
experiments/hypernet-lora/configs/: ddp.yaml  fsdp.yaml  qwen3_06b.yaml  qwen3_32b.yaml  qwen3_4b.yaml  qwen3_8b.yaml
experiments/hypernet-lora/src/: data.py  eval.py  hypernet.py  lora.py  train.py
experiments/hypernet-lora/tests/: test_qwen3_integration.py  test_smoke.py
experiments/swe-agent-d2l/: .gitignore  CLAUDE.md  README.md  pyproject.toml
experiments/swe-agent-d2l/configs/: qwen3_06b_smoke.yaml  qwen3_4b_pilot.yaml
experiments/swe-agent-d2l/src/swe_agent_d2l/: __init__.py  batching.py  config.py  env.py  eval_next_action.py  hyper_lora.py  losses.py  precompute_teacher.py  prepare_swechat.py  tokenization.py  tools.py  train.py  trajectory.py  windows.py
experiments/swe-agent-d2l/tests/: test_tokenization.py  test_tools_and_trajectory.py
