[project]
name = "hypernet-lora"
version = "0.0.1"
description = "Hypernet-distilled LoRA from context: MVP doc-to-LoRA reproduction on Qwen3."
requires-python = ">=3.11"
dependencies = [
  "torch>=2.5",
  "transformers>=4.46",
  "accelerate>=0.34",
  "datasets>=3.0",
  "wandb>=0.18",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
flash = ["flash-attn>=2.6"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
